<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="control">控制</string>
    <string name="system">系统</string>
    <string name="run">运行</string>
    <string name="cpc">集中柜</string>
    <string name="cpr">整流模块</string>
    <string name="cl">回路</string>
    <string name="subcl">子回路</string>
    <string name="procont">程控</string>
    <string name="scene">场景</string>
    <string name="adjust">调光</string>
    <string name="offon">通断</string>
    <string name="common">通讯</string>
    <string name="manager">管理</string>
    <string name="set">设置</string>
    <string name="task_detail">任务详情</string>
    <string name="title2">Direct Touch</string>
    <string name="title">dOUCH</string>
    <string name="record">日志</string>
    <string name="toleft">&lt;&lt;回路</string>
    <string name="version">2.1.7</string>
    <string name="defaultPwd">admin</string>
    <string name="defaultUser">admin</string>

</resources>
